QCHubPackage/main/default/objects/QC_Flag__c/QC_Flag__c.object-meta.xml
<CustomObject>
    <description>Added to a hero&apos;s QC Interview to note comments about the interview.</description>
    <label>QC Flag</label>
    <nameField>
        <label>QC Flag Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QC Flags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>