QCHubPackage/main/default/objects/QC_Flag__c/fields/QC_Interview__c.field-meta.xml
<CustomField>
    <fullName>QC_Interview__c</fullName>
    <label>QC Interview</label>
    <referenceTo>QC_Interview__c</referenceTo>
    <relationshipLabel>QC Flags</relationshipLabel>
    <relationshipName>QC_Flags</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>