QCHubPackage/main/default/objects/QC_Flag__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lack of Professionalism</fullName>
            </value>
            <value>
                <fullName>Disfluency</fullName>
            </value>
            <value>
                <fullName>Cursing</fullName>
            </value>
            <value>
                <fullName>Uncertainty</fullName>
            </value>
            <value>
                <fullName>Dress Code</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>